# evoke-vllm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  REPORT.md  arms.py  cli.py  matrix-skew.toml  matrix.py  matrix.toml  metrics.py  report.py  runner.py
bench/results-published/: A0_W1_NA.json  A0_W2_NA.json  A0_W3_NA.json  A1_W1S_B1.json  A1_W1S_B2.json  A1_W1_B0.json  A1_W1_B1.json  A1_W1_B2.json  A1_W1_B3.json  A1_W2_B0.json  A1_W2_B1.json  A1_W2_B2.json  A1_W2_B3.json  A1_W3_B0.json  A1_W3_B1.json  A1_W3_B2.json  A1_W3_B3.json  A2_W1S_B1.json  A2_W1S_B2.json  A2_W1_B0.json  A2_W1_B1.json  A2_W1_B2.json  A2_W1_B3.json  A2_W2_B0.json  A2_W2_B1.json  A2_W2_B2.json  A2_W2_B3.json  A2_W3_B0.json  A2_W3_B1.json  A2_W3_B2.json  A2_W3_B3.json  A3_W1_B2.json  A3_W1_B3.json  A3_W2_B2.json  A3_W2_B3.json  A3_W3_B2.json  A3_W3_B3.json
bench/workloads/: base.py  cas.py  factory.py  memory_agent_bench.py  verdant_replay.py
evoke_vllm/: __init__.py  config.py  manager.py  policy.py  rope_delta.py  spec.py
profiles/: local-2060.env  wsl2-4070ti.env
scripts/: README.md  README_GATES.md  bench_driver.sh  fidelity_gate.py  gate_lib.py  serve.sh
tests/: conftest.py  offload_harness.py  test_bench_arms.py  test_bench_cas.py  test_bench_matrix.py  test_bench_memory_agent_bench.py  test_bench_metrics.py  test_bench_prefetch.py  test_bench_report.py  test_bench_runner.py  test_bench_verdant_replay.py  test_config.py  test_factory_route.py  test_gate_lib.py  test_manager.py  test_policy.py  test_serve_script.py  test_smoke.py  test_spec.py
(+18 files in other folders)
