[project]
name = "evoke-vllm"
version = "0.1.0"
description = "Relevance-driven CPU KV-cache offload policy for stock vLLM"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Anish Shrestha" }]
requires-python = ">=3.11"
keywords = ["vllm", "kv-cache", "offload", "eviction", "llm", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vllm==0.24.0",
    "numpy>=1.26",
]

[project.urls]
Repository = "https://github.com/Anyesh/evoke-vllm"
Paper = "https://doi.org/10.5281/zenodo.21285585"

[dependency-groups]
dev = [
    "blake3>=1.0",
    "datasets>=2.20,<3",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evoke_vllm"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Makes scripts/gate_lib.py and scripts/fidelity_gate.py importable as
# top-level modules from tests/, without a scripts/__init__.py (scripts/ is
# a directory of human-run GPU gates, not a package) or per-file sys.path
# hacks.
pythonpath = ["scripts"]
markers = [
    "network: requires internet access (real HF Hub fetch)",
]
